Feat :sparkles: Destaque no texto de página inicial.

--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -9,7 +9,7 @@
 		<div class="mx-auto flex max-w-2xl flex-col items-center">
 			<p class="f3 text-muted-foreground text-center">
 				<span class="text-foreground font-semibold">{{ profile.profession }}</span> com mais de
-				<span class="text-foreground font-semibold">{{ professionTime() }} anos</span> de experiência, nível
+				<span class="text-foreground font-semibold">{{ professionTime() }} anos de experiência</span>, nível
 				{{ profile.professionLevel.toLowerCase() }}, especializado na criação de interfaces responsivas para websites.
 			</p>
 		</div>
