--- a/src/app/layout/pages/contact/contact.component.html
+++ b/src/app/layout/pages/contact/contact.component.html
@@ -4,8 +4,8 @@
 	</div>
 	<div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
 		<div class="flex flex-col gap-6 rounded-lg border p-6 sm:p-8">
-			<h2 class="f3 text-muted-foreground">Fique à vontade para falar comigo</h2>
-			<p class="f4">
+			<h2 class="f3">Fique à vontade para falar comigo</h2>
+			<p class="f4 text-muted-foreground">
 				Agora que você chegou até aqui, quero saber o que você tem a dizer! Seja uma dúvida, uma ideia ou apenas um bate-papo, estou disponível para
 				trocar experiências. Vamos conversar!
 			</p>
