Feat :sparkles: Desatica interação do texto informativo do botão de captura de voz.

--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -59,7 +59,7 @@
 					/>
 					@if (!this.listening() && !this.disabled()) {
 						<span
-							class="invisible absolute right-1 mt-3 w-[320px] py-1 text-end text-xs transition-all duration-300 ease-in-out group-hover/item-microphone:visible max-sm:visible max-sm:text-[.6rem]"
+							class="pointer-events-none invisible absolute right-1 mt-3 w-[320px] py-1 text-end text-xs transition-all duration-300 ease-in-out group-hover/item-microphone:visible max-sm:visible max-sm:text-[.6rem]"
 							>Crie sua mensagem usando reconhecimento de voz.</span
 						>
 					}
