--- a/src/app/components/ui/avatar/avatar.component.html
+++ b/src/app/components/ui/avatar/avatar.component.html
@@ -1,1 +1,1 @@
-<img fetchpriority="high" src="img/profile-avatar.webp" alt="Joel Estumano" class="h-8 w-8 rounded-full" />
+<img fetchpriority="high" data-test-id="avatar" [src]="src()" [alt]="alt()" class="h-8 w-8 rounded-full" />
