Feat :sparkles: Loader animação.

--- a/src/app/layout/components/loader/loader.component.html
+++ b/src/app/layout/components/loader/loader.component.html
@@ -1,4 +1,19 @@
 <div class="mx-auto grid max-w-2xl grid-cols-1 justify-items-center gap-4">
-	<app-icon icon="boxLoaderCircle" class="animate-spin text-6xl [animation-duration:2s] [animation-timing-function:ease-in-out]" />
+	<div class="animate-smooth-bounce over relative flex h-[320px] w-[200px] flex-col items-center justify-center overflow-hidden">
+		<div class="from-background absolute inset-0 top-0 right-0 left-0 z-10 h-[15%] bg-gradient-to-b to-transparent"></div>
+
+		<div class="star star-left-1"></div>
+		<div class="star star-left-2"></div>
+		<div class="star star-left-3"></div>
+
+		<div class="star star-right-1"></div>
+		<div class="star star-right-2"></div>
+		<div class="star star-right-3"></div>
+
+		<app-icon icon="rocket" class="relative text-8xl" />
+		<div class="thrust-1 text-2xl">|</div>
+		<div class="thrust-2 text-xl">|</div>
+		<div class="thrust-3 text-lg">|</div>
+	</div>
 	<ng-content></ng-content>
 </div>
