--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,4 +1,4 @@
-<main class="mx-auto flex h-auto min-h-screen max-w-[1920px] flex-col" appMagicPointer>
+<main class="mx-auto flex h-auto min-h-screen max-w-[1920px] flex-col">
 	<app-nav-bar />
 	<div class="flex flex-grow flex-col justify-center">
 		<router-outlet />
