--- a/src/app/layout/pages/error-page/error-page.component.html
+++ b/src/app/layout/pages/error-page/error-page.component.html
@@ -3,5 +3,15 @@
 		<h1 class="f1 text-center !leading-normal">Erro<span class="absolute rotate-12">!</span></h1>
 		<p class="text-destructive">Ocorreu um erro ao obter dados do servidor.</p>
 		<p class="text-muted-foreground" data-test-id="status">{{ status() }}</p>
+		<div class="inline-flex gap-3">
+			<app-router-link title="Ir para o início" routerLink="/" variant="outline">
+				<app-icon icon="heroHome" class="scale-110" />
+				Ir para o início
+			</app-router-link>
+			<app-button title="Tentar novamente" (click)="goBack()" variant="outline">
+				<app-icon icon="heroArrowPath" class="scale-110" />
+				Tentar novamente
+			</app-button>
+		</div>
 	</div>
 </app-section>
