--- a/src/app/layout/pages/not-found-page/not-found-page.component.html
+++ b/src/app/layout/pages/not-found-page/not-found-page.component.html
@@ -3,5 +3,11 @@
 		<h1 class="f1 text-center !leading-normal">Ops<span class="absolute rotate-12">!</span></h1>
 		<p class="text-foreground">Esta página não foi encontrada.</p>
 		<p class="text-muted-foreground" data-test-id="status">{{ status() }}</p>
+		<div class="inline-flex gap-3">
+			<app-router-link title="Ir para o início" routerLink="/" variant="outline">
+				<app-icon icon="heroHome" class="scale-110" />
+				Ir para o início
+			</app-router-link>
+		</div>
 	</div>
 </app-section>
