--- a/src/app/layout/pages/not-found-page/not-found-page.component.html
+++ b/src/app/layout/pages/not-found-page/not-found-page.component.html
@@ -1,9 +1,9 @@
 <app-section>
 	<div class="mx-auto grid max-w-2xl grid-cols-1 justify-items-center gap-4">
 		<h1 class="f1 text-center !leading-normal">Ops<span class="absolute rotate-12">!</span></h1>
-		<p class="text-foreground">Esta página não foi encontrada.</p>
+		<p class="text-foreground text-center">Esta página não foi encontrada.</p>
 		<p class="text-muted-foreground" data-test-id="status">{{ status() }}</p>
-		<div class="inline-flex gap-3">
+		<div class="mt-8 flex flex-col items-center justify-center gap-3 sm:flex-row">
 			<app-router-link title="Ir para o início" routerLink="/" variant="outline">
 				<app-icon icon="heroHome" class="scale-110" />
 				Ir para o início
