Feat :sparkles: Ajustes boder radius.

--- a/src/app/layout/components/card-project/card-project.component.html
+++ b/src/app/layout/components/card-project/card-project.component.html
@@ -1,4 +1,4 @@
-<div class="grid h-[560px] grid-cols-1 overflow-hidden rounded-lg border max-sm:grid-rows-2 sm:h-[480px] sm:grid-cols-3">
+<div class="grid h-[560px] grid-cols-1 overflow-hidden rounded-md border max-sm:grid-rows-2 sm:h-[480px] sm:grid-cols-3">
 	<div class="col-span-1 flex sm:col-span-2">
 		<div class="max-sm:bg-background relative h-full w-full">
 			<img
