--- a/src/app/layout/pages/contact/contact.component.html
+++ b/src/app/layout/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
 		<h1 class="f2 text-center">Contato</h1>
 	</div>
 	<div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
-		<div class="flex flex-col gap-6 rounded-lg border p-6 sm:p-8">
+		<div class="flex flex-col gap-6 rounded-md border p-6 sm:p-8">
 			<h2 class="f3">Fique à vontade para falar comigo</h2>
 			<p class="f4 text-muted-foreground">
 				Agora que você chegou até aqui, quero saber o que você tem a dizer! Seja uma dúvida, uma ideia ou apenas um bate-papo, estou disponível para
@@ -12,7 +12,7 @@
 			<app-contact-form />
 		</div>
 		<div class="grid grid-cols-1 gap-5">
-			<div class="overflow-hidden rounded-lg border">
+			<div class="overflow-hidden rounded-md border">
 				<div class="relative flex h-full w-full flex-col items-center justify-center gap-2 overflow-hidden p-6 sm:gap-5 sm:p-8">
 					<app-icon
 						icon="bootstrapEnvelopeAt"
@@ -46,7 +46,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="overflow-hidden rounded-lg border">
+			<div class="overflow-hidden rounded-md border">
 				<div class="relative flex h-full w-full flex-col items-center justify-center gap-2 overflow-hidden p-6 sm:gap-5 sm:p-8">
 					<app-icon
 						icon="bootstrapWhatsapp"
