Feat :sparkles: Ajuste no layout.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main class="mx-auto flex h-auto min-h-screen max-w-[1920px] flex-col">
-	<app-nav-bar />
+<app-nav-bar />
+<main class="mx-auto flex min-h-[calc(100vh-48px)] max-w-[1920px] flex-col sm:min-h-[calc(100vh-65px)]">
 	<div class="flex flex-grow flex-col justify-center">
 		<router-outlet />
 	</div>
