--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,5 +1,5 @@
 <div class="mx-auto grid max-w-2xl grid-cols-1 justify-items-center gap-4">
-	<div class="animate-smooth-bounce over relative flex h-[320px] w-[200px] flex-col items-center justify-center overflow-hidden">
+	<div class="animate-smooth-bounce over relative flex h-[320px] w-[200px] rotate-45 flex-col items-center justify-center overflow-hidden">
 		<div class="from-background absolute inset-0 top-0 right-0 left-0 z-10 h-[15%] bg-gradient-to-b to-transparent"></div>
 
 		<div class="star star-left-1"></div>
