--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-background fixed top-0 right-0 left-0 z-[1000] block w-full border-b sm:bg-white/50 sm:backdrop-blur dark:sm:bg-black/50">
+<nav class="bg-background sticky top-0 right-0 left-0 z-[1000] block w-full border-b sm:bg-white/50 sm:backdrop-blur dark:sm:bg-black/50">
 	<div class="mx-auto grid h-full w-full max-w-screen-xl grid-cols-3 px-16 max-sm:px-4 xl:px-8">
 		<div class="flex h-12 items-center justify-start gap-4 sm:h-16">
 			<a class="outline-none" [routerLink]="['/']">
