--- a/src/app/pages/error-page/error-page.component.html
+++ b/src/app/pages/error-page/error-page.component.html
@@ -6,11 +6,11 @@
 			<p class="text-muted-foreground" data-test-id="status">{{ status() }}</p>
 		}
 		<div class="mt-8 flex flex-col items-center justify-center gap-3 sm:flex-row">
-			<app-router-link title="Ir para o início" routerLink="/" variant="outline">
+			<app-router-link title="Ir para o início" routerLink="/" variant="outline" classes="w-[171px]">
 				<app-icon icon="heroHome" class="scale-110" />
 				Ir para o início
 			</app-router-link>
-			<app-button title="Tentar novamente" (click)="goBack()" variant="outline">
+			<app-button title="Tentar novamente" (click)="goBack()" variant="outline" classes="w-[171px]">
 				<app-icon icon="heroArrowPath" class="scale-110" />
 				Tentar novamente
 			</app-button>
