--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="mx-auto grid h-svh w-full max-w-screen-xl grid-rows-[33%_1fr_33%] items-center justify-items-center sm:h-dvh sm:max-h-[60rem]">
+<div class="mx-auto grid min-h-[calc(100vh-48px)] w-full max-w-screen-xl grid-rows-[33%_1fr_33%] items-center justify-items-center sm:min-h-[calc(100vh-65px)]">
 	<!-- <div
 		class="relative h-8 w-full border-y border-(--pattern-fg) bg-[image:repeating-linear-gradient(315deg,_var(--pattern-fg)_0,_var(--pattern-fg)_1px,_transparent_0,_transparent_50%)] bg-[size:10px_10px] bg-fixed [--pattern-fg:var(--color-black)]/5 max-lg:h-8 max-lg:border-t dark:[--pattern-fg:var(--border)]"
 	></div> -->
