--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,9 +8,8 @@
 		</h1>
 		<div class="mx-auto flex max-w-2xl flex-col items-center">
 			<p class="f3 text-muted-foreground text-center">
-				<span class="text-foreground font-semibold">{{ profile.profession }}</span> com mais de
-				<span class="text-foreground font-semibold">{{ professionTime() }} anos de experiência</span>, nível
-				{{ profile.professionLevel.toLowerCase() }}, especializado na criação de interfaces responsivas para websites.
+				<span class="text-foreground font-semibold">{{ profile.profession }}</span>
+				{{ profile.professionEmphasis.toLocaleLowerCase() }}
 			</p>
 		</div>
 		<app-link
