Feat :sparkles: Atualização > Textos de apresentação.

--- a/src/app/shared/components/contact-form/contact-form.component.html
+++ b/src/app/shared/components/contact-form/contact-form.component.html
@@ -70,7 +70,7 @@
 	<div class="flex justify-center">
 		<app-button type="submit" title="Enviar mensagem" classes="w-[171px]">
 			<app-icon [icon]="this.disabled() ? 'boxLoaderCircle' : 'bootstrapSend'" [ngClass]="{ 'animate-spin': this.disabled() }" />
-			{{ this.disabled() ? "Enviando..." : "Enviar mensagem" }}
+			{{ this.disabled() ? "Enviando..." : "Enviar Mensagem" }}
 		</app-button>
 	</div>
 </form>
