--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -9,7 +9,7 @@
 		<div class="mx-auto flex max-w-2xl flex-col items-center">
 			<p class="f3 text-muted-foreground text-center">
 				<span class="text-foreground font-semibold">{{ profile.profession }}</span>
-				{{ profile.professionEmphasis.toLocaleLowerCase() }}
+				{{ profile.professionEmphasis | lowercase }}
 			</p>
 		</div>
 		<app-link
