--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -35,16 +35,18 @@
 	}
 </div>
 
-<!-- <app-section #sectionSobre>
+<app-section #sectionSobre>
 	@defer (on viewport(sectionSobre)) {
 		<div class="flex flex-col gap-8 sm:gap-16">
-			<div class="mx-auto flex w-full max-w-2xl flex-col items-center gap-8">
+			<!-- <div class="mx-auto flex w-full max-w-2xl flex-col items-center gap-8">
 				<h2 class="f2 text-center">Sobre</h2>
 				<p class="f3 text-muted-foreground text-center">
-					Tô sempre buscando fazer melhor, aprender com os outros e entregar com qualidade. Gosto de colaborar, encarar desafios e deixar tudo bem
-					resolvido e com cuidado nos detalhes.
+					Tenho experiência em análise aplicada à engenharia de software, com domínio de diversas tecnologias, frameworks e metodologias de
+					desenvolvimento. Ao longo da minha trajetória, venho atuando na definição de arquiteturas eficientes, enfrentando desafios técnicos
+					complexos e tomando decisões estratégicas que impactam diretamente na qualidade e escalabilidade dos projetos. Sou movido pela busca
+					constante por soluções inteligentes, inovação e excelência técnica.
 				</p>
-			</div>
+			</div> -->
 			<div class="mx-auto grid w-full gap-5 max-lg:max-w-2xl lg:grid-cols-3">
 				@for (about of abouts; track $index) {
 					<div class="bg-card/20 hover:bg-card/50 flex w-full flex-col items-center gap-5 rounded-md border p-6 transition-all sm:p-8">
@@ -62,7 +64,7 @@
 			</div>
 		</div>
 	}
-</app-section> -->
+</app-section>
 
 <app-section #sectionExperiences>
 	@defer (on viewport(sectionExperiences)) {
