--- a/src/app/layout/pages/contact/contact.component.html
+++ b/src/app/layout/pages/contact/contact.component.html
@@ -6,8 +6,8 @@
 		<div class="flex flex-col gap-6 rounded-md border p-6 sm:p-8">
 			<h2 class="f3">Fique à vontade para falar comigo</h2>
 			<p class="f4 text-muted-foreground">
-				Agora que você chegou até aqui, quero saber o que você tem a dizer! Seja uma dúvida, uma ideia ou apenas um bate-papo, estou disponível para
-				trocar experiências. Vamos conversar!
+				Agora que você chegou até aqui, quero saber o que você tem a dizer! Seja uma dúvida, uma ideia ou apenas um bate-papo<!-- , estou disponível para
+				trocar experiências -->. Vamos conversar!
 			</p>
 			<app-contact-form />
 		</div>
