--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -43,7 +43,9 @@
 			</div>
 			<div class="mx-auto grid w-full gap-5 max-lg:max-w-2xl lg:grid-cols-3">
 				@for (about of abouts; track $index) {
-					<div class="bg-card/20 hover:bg-card/50 flex w-full flex-col items-center gap-5 rounded-md border p-6 transition-all sm:p-8">
+					<div
+						class="bg-card/20 hover:bg-card/50 flex w-full flex-col items-center gap-5 rounded-md border p-6 transition-shadow hover:shadow-lg sm:p-8"
+					>
 						<div class="flex flex-col items-center">
 							<div class="bg-background flex size-14 items-center justify-center rounded-full border">
 								<app-icon [icon]="about.icon" class="text-3xl" />
