--- a/src/app/shared/components/card-project/card-project.component.html
+++ b/src/app/shared/components/card-project/card-project.component.html
@@ -1,10 +1,10 @@
-<div class="grid h-[560px] grid-cols-1 overflow-hidden rounded-md border max-sm:grid-rows-2 sm:h-[480px] sm:grid-cols-3">
+<div class="group grid h-[560px] grid-cols-1 overflow-hidden rounded-md border max-sm:grid-rows-2 sm:h-[480px] sm:grid-cols-3">
 	<div class="col-span-1 flex sm:col-span-2">
 		<div class="max-sm:bg-background relative h-full w-full">
 			<img
 				data-test-id="image"
 				[ngSrc]="data().bannerUrl"
-				class="pointer-events-none h-full w-full object-cover object-top sm:object-left-top"
+				class="pointer-events-none h-full w-full object-cover object-top transition-transform duration-300 group-hover:scale-105 sm:object-left-top"
 				[alt]="data().name"
 				loading="eager"
 				fill
