--- a/src/app/layout/pages/contact/contact.component.html
+++ b/src/app/layout/pages/contact/contact.component.html
@@ -1,6 +1,6 @@
-<app-section>
-	<div class="mt-1.5 grid grid-cols-1">
-		<h1 class="f2 text-center">Contato</h1>
+<app-section class="py-12 sm:py-16 xl:py-24">
+	<div class="mx-auto mb-8 flex w-full max-w-2xl flex-col items-center">
+		<h1 class="f2 mb-4 text-center">Contato</h1>
 	</div>
 	<div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
 		<div class="flex flex-col gap-6 rounded-md border p-6 sm:p-8">
