--- a/src/app/layout/pages/blog/blog.component.html
+++ b/src/app/layout/pages/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div class="py-4">
+<div class="p-4">
 	<div class="mx-auto flex max-w-lg flex-col">
 		<iframe
 			src="https://www.linkedin.com/embed/feed/update/urn:li:share:7387143803796623360"
