--- a/src/app/layout/pages/blog/blog.component.html
+++ b/src/app/layout/pages/blog/blog.component.html
@@ -1,29 +1,18 @@
 <div class="p-4">
-	<div class="mx-auto flex max-w-lg flex-col">
-		<iframe
-			src="https://www.linkedin.com/embed/feed/update/urn:li:share:7387143803796623360"
-			height="1378"
-			width="504"
-			frameborder="0"
-			allowfullscreen=""
-			title="Publicação incorporada"
-		></iframe>
-		<iframe
-			src="https://www.linkedin.com/embed/feed/update/urn:li:share:7384735801475248129"
-			height="1315"
-			width="504"
-			frameborder="0"
-			allowfullscreen=""
-			title="Publicação incorporada"
-		></iframe>
-		<!--  -->
-		<iframe
-			src="https://www.linkedin.com/embed/feed/update/urn:li:share:7336828722898952193"
-			height="1046"
-			width="504"
-			frameborder="0"
-			allowfullscreen=""
-			title="Publicação incorporada"
-		></iframe>
+	<div class="mx-auto flex max-w-lg flex-col transition-all duration-300">
+		@for (post of posts(); track $index) {
+			<div class="relative" [ngStyle]="{ height: post.height + 'px', width: post.width + 'px' }">
+				@if (post.loading) {
+					<div class="absolute inset-0 pb-3">
+						<div class="flex h-full w-full overflow-hidden rounded-md border">
+							<div class="bg-card flex h-full w-full animate-pulse items-center justify-center">
+								<p class="text-muted-foreground text-sm">Carregando...</p>
+							</div>
+						</div>
+					</div>
+				}
+				<iframe [src]="post.src" [height]="post.height" [width]="post.width" [title]="post.title" (load)="post.loading = false"></iframe>
+			</div>
+		}
 	</div>
 </div>
