--- a/src/app/shared/components/contact-form/contact-form.component.html
+++ b/src/app/shared/components/contact-form/contact-form.component.html
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 	<div class="flex justify-center">
-		<app-button type="submit" title="Enviar mensagem" classes="w-[171px]">
+		<app-button variant="custom" type="submit" title="Enviar mensagem" classes="w-[171px]">
 			<app-icon [icon]="this.disabled() ? 'boxLoaderCircle' : 'bootstrapSend'" [ngClass]="{ 'animate-spin': this.disabled() }" />
 			{{ this.disabled() ? "Enviando..." : "Enviar Mensagem" }}
 		</app-button>
