--- a/src/app/shared/components/card-project/card-project.component.html
+++ b/src/app/shared/components/card-project/card-project.component.html
@@ -32,7 +32,7 @@
 		<div class="inline-flex items-center gap-3">
 			<app-router-link
 				data-test-id="saiba-mais-link"
-				variant="outline"
+				variant="custom"
 				size="sm"
 				[title]="'Saiba mais sobre ' + data().name"
 				[routerLink]="['/projetos', data().id]"
@@ -40,7 +40,7 @@
 				Saiba mais
 			</app-router-link>
 			@if (data().demoUrl) {
-				<app-link data-test-id="demo-link" variant="default" size="sm" [title]="data().name" [href]="data().demoUrl" target="_blank">
+				<app-link variant="custom" size="sm" [title]="data().name" [href]="data().demoUrl" target="_blank" data-test-id="demo-link">
 					Demo
 					<app-icon icon="heroArrowUpRight" />
 				</app-link>
