--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -45,6 +45,24 @@
 				<div
 					class="group/img-item bg-background/75 hover:bg-background/85 relative flex w-full flex-col items-center gap-5 overflow-hidden rounded-md border p-6 transition-all duration-300 hover:shadow-lg sm:p-8"
 				>
+					<div
+						aria-hidden="true"
+						class="center pointer-events-none absolute top-[0px] left-1/2 h-px w-[60%] max-w-full -translate-x-1/2 -translate-y-1/2 md:ml-16"
+						[ngClass]="{
+							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-1),_rgba(0,0,0,0)_100%)]': $index === 0,
+							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-2),_rgba(0,0,0,0)_100%)]': $index === 1,
+							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-5),_rgba(0,0,0,0)_100%)]': $index === 2
+						}"
+					></div>
+					<div
+						aria-hidden="true"
+						class="center pointer-events-none absolute -bottom-[1px] left-1/2 h-px w-[60%] max-w-full translate-x-[-50%] translate-y-[-50%] md:right-4 md:left-auto"
+						[ngClass]="{
+							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-1),_rgba(0,0,0,0)_100%)]': $index === 0,
+							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-2),_rgba(0,0,0,0)_100%)]': $index === 1,
+							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-5),_rgba(0,0,0,0)_100%)]': $index === 2
+						}"
+					></div>
 					<div class="flex flex-col items-center">
 						<div class="bg-background/5 flex size-14 items-center justify-center rounded-full border">
 							<app-icon [icon]="service.icon" class="text-3xl" />
@@ -70,37 +88,11 @@
 	}
 </app-section>
 
-<!-- <app-section #sectionExperiences>
-	@defer (on viewport(sectionExperiences)) {
-		<div class="flex flex-col gap-8 sm:gap-16">
-			<div class="mx-auto flex w-full max-w-md flex-col items-center gap-8">
-				<h2 class="f2 text-center">Experiências</h2>
-				<div class="grid w-full grid-rows-2 gap-5">
-					@for (experience of profile.experiences; track $index) {
-						<div class="bg-card/20 hover:bg-card/50 w-full rounded-md border p-6 transition-all sm:p-8">
-							<div class="flex flex-col max-sm:items-center">
-								<p class="f3 !text-foreground mb-2">{{ experience.company }}</p>
-								<p class="text-muted-foreground">{{ experience.office }}</p>
-								<p class="text-muted-foreground text-sm">{{ experience.period }}</p>
-								<div class="inline-flex gap-2">
-									<app-icon icon="heroBriefcase" />
-									<p>{{ experience.local }}</p>
-								</div>
-							</div>
-						</div>
-					}
-				</div>
-			</div>
-		</div>
-	}
-</app-section>
- -->
-<app-section #sectionProjetos class="relative dark:bg-[radial-gradient(27.27%_35.9%_at_50%_0%,#131315_0%,var(--background)_100%)]" [full]="true">
-	<div
+<app-section #sectionProjetos class="relative___dark:bg-[radial-gradient(27.27%_35.9%_at_50%_0%,#131315_0%,var(--background)_100%)]" [full]="true">
+	<!-- <div
 		aria-hidden="true"
-		class="center pointer-events-none absolute top-0 left-1/2 h-px w-[300px] max-w-full -translate-x-1/2 -translate-y-1/2"
-		style="background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 0) 0%, rgba(143, 143, 143, 0.67) 50%, rgba(0, 0, 0, 0) 100%)"
-	></div>
+		class="center pointer-events-none absolute top-0 left-1/2 h-px w-sm max-w-full -translate-x-1/2 -translate-y-1/2 opacity-50 md:w-md lg:w-lg dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--accent-foreground),_rgba(0,0,0,0)_100%)]"
+	></div> -->
 	@defer (on viewport(sectionProjetos)) {
 		<div class="mx-auto mb-16 flex w-full max-w-2xl flex-col items-center px-4 sm:px-16 xl:px-8">
 			<h2 class="f2 mb-8 text-center">Portfólio</h2>
