--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -43,11 +43,11 @@
 		<div class="mx-auto grid w-full gap-5 max-lg:max-w-md lg:grid-cols-3">
 			@for (service of services; track $index) {
 				<div
-					class="group/img-item bg-background/75 hover:bg-background/85 relative flex w-full flex-col items-center gap-5 overflow-hidden rounded-md border p-6 transition-all duration-300 hover:shadow-lg sm:p-8"
+					class="group/img-item group/border-item bg-background/75 hover:bg-background/85 relative flex w-full flex-col items-center gap-5 overflow-hidden rounded-md border p-6 transition-all duration-300 hover:shadow-lg sm:p-8"
 				>
 					<div
 						aria-hidden="true"
-						class="center pointer-events-none absolute top-[0px] left-1/2 h-px w-[60%] max-w-full -translate-x-1/2 -translate-y-1/2 md:ml-16"
+						class="center pointer-events-none absolute top-[.04rem] left-1/2 h-px w-[60%] max-w-full -translate-x-1/2 -translate-y-1/2 opacity-0 transition-opacity duration-300 group-hover/border-item:opacity-100 group-hover/border-item:md:ml-16"
 						[ngClass]="{
 							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-1),_rgba(0,0,0,0)_100%)]': $index === 0,
 							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-2),_rgba(0,0,0,0)_100%)]': $index === 1,
@@ -56,7 +56,7 @@
 					></div>
 					<div
 						aria-hidden="true"
-						class="center pointer-events-none absolute -bottom-[1px] left-1/2 h-px w-[60%] max-w-full translate-x-[-50%] translate-y-[-50%] md:right-4 md:left-auto"
+						class="center pointer-events-none absolute -bottom-[1px] left-1/2 h-px w-[60%] max-w-full translate-x-[-50%] translate-y-[-50%] opacity-0 transition-opacity duration-300 group-hover/border-item:opacity-100 md:right-4 group-hover/border-item:md:left-auto"
 						[ngClass]="{
 							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-1),_rgba(0,0,0,0)_100%)]': $index === 0,
 							'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--chart-2),_rgba(0,0,0,0)_100%)]': $index === 1,
@@ -88,11 +88,11 @@
 	}
 </app-section>
 
-<app-section #sectionProjetos class="relative___dark:bg-[radial-gradient(27.27%_35.9%_at_50%_0%,#131315_0%,var(--background)_100%)]" [full]="true">
-	<!-- <div
+<app-section #sectionProjetos class="relative dark:bg-[radial-gradient(27.27%_35.9%_at_50%_0%,#131315_0%,var(--background)_100%)]" [full]="true">
+	<div
 		aria-hidden="true"
 		class="center pointer-events-none absolute top-0 left-1/2 h-px w-sm max-w-full -translate-x-1/2 -translate-y-1/2 opacity-50 md:w-md lg:w-lg dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_var(--accent-foreground),_rgba(0,0,0,0)_100%)]"
-	></div> -->
+	></div>
 	@defer (on viewport(sectionProjetos)) {
 		<div class="mx-auto mb-16 flex w-full max-w-2xl flex-col items-center px-4 sm:px-16 xl:px-8">
 			<h2 class="f2 mb-8 text-center">Portfólio</h2>
