--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -4,12 +4,12 @@
 	<div
 		aria-hidden="true"
 		class="center pointer-events-none absolute top-[.04rem] left-1/2 h-px w-[60%] max-w-full -translate-x-1/2 -translate-y-1/2 opacity-0 transition-opacity group-hover/highlight-card:opacity-100 group-hover/highlight-card:md:ml-16"
-		[ngClass]="'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_' + highlight() + ',_rgba(0,0,0,0)_100%)]'"
+		[ngStyle]="{ 'background-image': highlightGradient() }"
 	></div>
 	<div
 		aria-hidden="true"
 		class="center pointer-events-none absolute -bottom-[1px] left-1/2 h-px w-[60%] max-w-full translate-x-[-50%] translate-y-[-50%] opacity-0 transition-opacity group-hover/highlight-card:opacity-100 md:right-4 group-hover/highlight-card:md:left-auto"
-		[ngClass]="'dark:bg-[linear-gradient(90deg,_rgba(0,0,0,0)_0%,_rgba(255,255,255,0)_0%,_' + highlight() + ',_rgba(0,0,0,0)_100%)]'"
+		[ngStyle]="{ 'background-image': highlightGradient() }"
 	></div>
 	<div class="flex size-14 items-center justify-center rounded-full">
 		<app-icon data-test-id="card-icon" [icon]="icon()" class="text-4xl" />
