--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -2,7 +2,12 @@
 	<div class="mx-auto grid h-full w-full max-w-screen-xl grid-cols-3 px-16 max-sm:px-4 xl:px-8">
 		<div class="flex h-12 items-center justify-start gap-4 sm:h-16">
 			<a class="outline-none" [routerLink]="['/']">
-				<img class="d-block" [src]="!isDarkTheme() ? 'logo-black.png' : 'logo-white.png'" alt="Logo Joel Estumano" width="40" />
+				<img
+					class="d-block"
+					[src]="!isDarkTheme() ? 'joel-estumano-logo-black.png' : 'joel-estumano-logo-white.png'"
+					alt="Logo Joel Estumano"
+					width="40"
+				/>
 			</a>
 		</div>
 		<div class="col-span-2 flex h-full justify-end">
